--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div> <button class="close-modal">Close</button><span class="morph-background"></span></div>
-<div class="main-block">
+<!-- <div class="main-block">
     <div class="image-pattern">
         <div class="widget-wrapper photo-banner">
             <img 
@@ -93,9 +93,9 @@
             </div>
         </div> <a href="#sushimenu" class="scroll-down nav-link"></a>
 
-    </div>
-    <div class="info">
-        <div class="info-block service-block" id="sushimenu">
+    </div> -->
+   <!-- <div class="info">
+         <div class="info-block service-block" id="sushimenu">
             <div class="info-block-wrapper">
                 <div class="widget-wrapper"><h2>ПРОПОНУЄМО ТІЛЬКИ НАЙКРАЩЕ</h2></div>
                 <div class="widget-wrapper"><ul>
@@ -377,9 +377,10 @@
 </div>
 </div>
 </div>
+</div> -->
 </div>
 </div>
-</div>
+<div id="root"></div>
 <!-- scroll -->
 <script>document.addEventListener("DOMContentLoaded", function () { const scrollLinks = document.querySelectorAll(".scroll-down"); scrollLinks.forEach(function (link) { link.addEventListener("click", function (e) { e.preventDefault(); const targetId = this.getAttribute("href").substring(1); const targetElement = document.getElementById(targetId); if (targetElement) { const offset = targetElement.getBoundingClientRect().top; const scrollOptions = { top: offset, behavior: "smooth" }; window.scrollTo(scrollOptions); } }); }); });</script>
 <!-- nav menu -->
