--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/style.css">
+    <link rel="stylesheet" href="../src/App.css">
     <title>Osama Sushi</title>
 </head>
 <body class="">
@@ -14,7 +14,7 @@
 </div>
 <div class="nav"><div class="nav__content">
     <a class="login" href="log.html" style="position: fixed;top: -100px;left: 0;transition: top 0.5s ease-in-out;">
-        <img src="src/assets/images/loginUs.png" alt="Авторизація" class="logimg" style="width: 50px; height: 50px; margin-top: 10px; margin-left: 10px; margin-right: 10px; margin-bottom: 10px;">
+        <img src="../src/assets/images/loginUs.png" alt="Авторизація" class="logimg" style="width: 50px; height: 50px; margin-top: 10px; margin-left: 10px; margin-right: 10px; margin-bottom: 10px;">
     </a>
     <div class="widget-wrapper nav__list">
         <div class="textwidget">
@@ -45,9 +45,9 @@
             <div class="widget-wrapper">
                 <p>
                     <a href="#" class="logo-wrapper">
-                        <img height="152px" width="183px" class=" lazyloaded" src="/src/assets/images/xlogo2.png"><noscript>
-                            <img height=152px width=183px class=lazyload src="/src/assets/images/xlogo2.png"><noscript>
-                                <img src="/src/assets/images/xlogo2.png" height=152px width=183px></noscript>
+                        <img height="152px" width="183px" class=" lazyloaded" src="../src/assets/images/xlogo2.png"><noscript>
+                            <img height=152px width=183px class=lazyload src="../src/assets/images/xlogo2.png"><noscript>
+                                <img src="../src/assets/images/xlogo2.png" height=152px width=183px></noscript>
                     </a>
                 </p>
             </div>
