--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </div>
 <div class="nav"><div class="nav__content">
     <a class="login" href="log.html" style="position: fixed;top: -100px;left: 0;transition: top 0.5s ease-in-out;">
-        <img src="../src/assets/images/loginUs.png" alt="Авторизація" class="logimg" style="width: 50px; height: 50px; margin-top: 10px; margin-left: 10px; margin-right: 10px; margin-bottom: 10px;">
+        <img src="./loginUs.png" alt="Авторизація" class="logimg" style="width: 50px; height: 50px; margin-top: 10px; margin-left: 10px; margin-right: 10px; margin-bottom: 10px;">
     </a>
     <div class="widget-wrapper nav__list">
         <div class="textwidget">
