--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
             <div class="widget-wrapper">
                 <p>
                     <a href="#" class="logo-wrapper">
-                        <img height="152px" width="183px" class=" lazyloaded" src="../src/assets/images/xlogo2.png"><noscript>
-                            <img height=152px width=183px class=lazyload src="../src/assets/images/xlogo2.png"><noscript>
-                                <img src="../src/assets/images/xlogo2.png" height=152px width=183px></noscript>
+                        <img height="152px" width="183px" class=" lazyloaded" src="./xlogo2.png"><noscript>
+                            <img height=152px width=183px class=lazyload src="./xlogo2.png"><noscript>
+                                <img src="./xlogo2.png" height=152px width=183px></noscript>
                     </a>
                 </p>
             </div>
